ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/TR_Test_Execution_Step__c.object-meta.xml
<CustomObject>
    <label>Test Execution Step</label>
    <nameField>
        <displayFormat>TES-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Execution Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>