ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/fields/TR_Comments__c.field-meta.xml
<CustomField>
    <fullName>TR_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>