ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/fields/TR_Sequence__c.field-meta.xml
<CustomField>
    <fullName>TR_Sequence__c</fullName>
    <formula>IF(LEN(TEXT(TR_Template_Step__r.TR_Ranked_Sequence__c)) &lt;2, &quot;0&quot; &amp; TEXT(TR_Template_Step__r.TR_Ranked_Sequence__c ), TEXT(TR_Template_Step__r.TR_Ranked_Sequence__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence</label>
    <type>Text</type>
</CustomField>