ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/fields/TR_Step_Outcome__c.field-meta.xml
<CustomField>
    <fullName>TR_Step_Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
                <color>#0B6FCE</color>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Passed with issues</fullName>
                <color>#F3D904</color>
                <label>Passed with issues</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#FF0000</color>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>