ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/fields/TR_StepNum__c.field-meta.xml
<CustomField>
    <fullName>TR_StepNum__c</fullName>
    <formula>TR_Template_Step__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step #</label>
    <type>Text</type>
</CustomField>