ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/fields/TR_Template_Step__c.field-meta.xml
<CustomField>
    <fullName>TR_Template_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Step</label>
    <referenceTo>TR_Test_Script_Step__c</referenceTo>
    <relationshipLabel>Test Execution Steps</relationshipLabel>
    <relationshipName>Test_Execution_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>