ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/fields/TR_Test_Execution__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Execution__c</fullName>
    <label>Test Execution</label>
    <referenceTo>TR_Test_Execution__c</referenceTo>
    <relationshipLabel>Test Execution Steps</relationshipLabel>
    <relationshipName>Test_Execution_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>