ProTrackDev/force-app/main/default/objects/TR_Test_Execution_Step__c/fields/TR_Tips__c.field-meta.xml
<CustomField>
    <fullName>TR_Tips__c</fullName>
    <label>Tips</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>